# personal-website

./: 404.html  CNAME  index.html  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci_workflow.yml
docs/: CNAME
publications/: index.html
search/: search_index.json
stylesheets/: extra.css
website/: CNAME  mkdocs.yml
website/docs/: about.md  index.md  publications.md
website/site/search/: search_index.json
