[tool.poetry]
name = "personal-website"
version = "0.1.0"
description = "Personal Website"
authors = ["Nils P. Kujath <63961429+NilsKujath@users.noreply.github.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
